--- a/.github/workflows/virus-total-scan.yml
+++ b/.github/workflows/virus-total-scan.yml
@@ -6,14 +6,16 @@ on:
 
 jobs:
   virustotal:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: VirusTotal Scan
-        uses: crazy-max/ghaction-virustotal@v3
-        with:
-          vt_api_key: ${{ secrets.VT_API_KEY }}
-          update_release_body: true
-          files: |
-            .exe$
-            .zip$
+      permissions: write-all
+      runs-on: ubuntu-latest
+      steps:
+        -
+          name: VirusTotal Scan
+          uses: crazy-max/ghaction-virustotal@v3
+          with:
+            vt_api_key: ${{ secrets.VT_API_KEY }}
+            update_release_body: true
+            files: |
+              .exe$
+              .zip$
+              .apk$
